--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,8 @@ body {
     "quote pic pic"
     "missionbtn pic pic";
   padding: var(--sideMargins);
-  padding: 3em 3em 2em 3em;
+  /* padding: 3em 3em 2em 3em; */
+  padding: 5em 0 5em 0;
   overflow: hidden;
 }
 
