--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ body {
     "title pic pic"
     "quote pic pic"
     "missionbtn pic pic";
-  padding-top: 6em;
+  padding-top: 8em;
   /* padding: var(--sideMargins); */
 
   /* overflow: hidden; */
@@ -52,7 +52,9 @@ body {
 
 .navbar {
   display: flex;
-  position: relative;
+  position: fixed;
+  top: 0;
+  z-index: 99;
   justify-content: space-between;
   height: 5em;
   background-color: #ffffff;
