--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,8 @@ body {
     "quote pic pic"
     "missionbtn pic pic";
   padding-top: 8em;
-  /* padding: var(--sideMargins); */
-
-  /* overflow: hidden; */
+  padding-left: 10em;
+  padding-right: 10em;
 }
 
 .navbar {
@@ -148,9 +147,13 @@ body {
   animation: fadeIn 2s;
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1700px) {
   .hero-content {
-    padding-left: 10em;
-    padding-right: 10em;
+    /* padding-left: 20em;
+    padding-right: 20em; */
+  }
+  .pic img {
+    width: 636px;
+    height: 646px;
   }
 }
