--- a/css/styles.css
+++ b/css/styles.css
@@ -169,8 +169,8 @@ body {
     padding-left: 4em;
     padding-right: 4em;
   }
-
-  .title img {
-    width: 250px;
+  .pic img {
+    width: 236px;
+    height: 246px;
   }
 }
