--- a/css/styles.css
+++ b/css/styles.css
@@ -163,15 +163,16 @@ body {
 }
 
 /* Tablet */
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   .hero-content {
     padding-top: 4em;
     padding-left: 4em;
     padding-right: 4em;
-    row-gap: 3.5em;
+    row-gap: 3em;
   }
   .pic img {
-    width: 400px;
-    height: 400x;
+    width: 450px;
+    height: 450x;
+    float: center;
   }
 }
