adjusted background color on Body

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ after {
 }
 
 body {
-  background-color: var(--primary-color);
+  background-color: linear-gradient(
+    45deg,
+    rgba(50, 13, 13, 0.9682466736694678) 0%,
+    rgba(143, 34, 34, 1) 84%;)
   font-family: "Roboto Slab", serif;
 }
 
