--- a/css/styles.css
+++ b/css/styles.css
@@ -27,10 +27,9 @@ body {
 
 .container {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   position: relative;
-  overflow: hidden;
-  scroll-behavior: smooth;
+  /* scroll-behavior: smooth; */
   background: rgb(50, 13, 13);
   background: linear-gradient(
     45deg,
