adjusted .container height

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body {
   background-color: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
-    rgba(143, 34, 34, 1) 84%;)
+    rgba(143, 34, 34, 1) 84%);
   font-family: "Roboto Slab", serif;
 }
 
