--- a/css/styles.css
+++ b/css/styles.css
@@ -167,11 +167,11 @@ body {
 }
 
 /* Tablets */
-/* @media only screen and (max-width: 1024px) {
+ @media only screen and (max-width: 760px) { 
   .hero-content {
-    padding-left: 12em;
-    padding-right: 12em;
-    row-gap: 2em;
+    padding-left: 0;
+    padding-right: 0;
+    row-gap: 1em;
     grid-template-areas:
       "title pic "
       "quote pic "
@@ -182,4 +182,4 @@ body {
     height: 350px;
     float: left;
   }
-} */
+} 
