media query change

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ body {
 }
 
 /* Tablets */
- @media only screen and (max-width: 768px) { 
+@media (min-width: 768px) and (max-width: 1024px){ 
   .hero-content {
     padding-left: 0;
     padding-right: 0;
