--- a/css/styles.css
+++ b/css/styles.css
@@ -169,8 +169,8 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1024px){ 
   .hero-content {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: .5em;
+    padding-right: 0.5em;
     row-gap: 5em;
 
   }
