--- a/css/styles.css
+++ b/css/styles.css
@@ -169,14 +169,14 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1024px){ 
   .hero-content {
-    padding-left: .5em;
-    padding-right: 0.5em;
-    row-gap: 5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    row-gap: 4em;
 
   }
   .pic img {
-    width: 350px;
-    height: 350px;
+    width: 450px;
+    height: 450px;
     float: right;
   }
 } 
