--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,10 @@ body {
     padding-left: 1em;
     padding-right: 1em;
     row-gap: 4em;
-
+    grid-template-areas:
+    "title pic "
+    "quote pic "
+    "missionbtn pic";
   }
   .pic img {
 
