media query change

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,11 @@ body {
   padding-top: 4em;
   padding-left: 10em;
   padding-right: 10em;
+  background: linear-gradient(
+    45deg,
+    rgba(50, 13, 13, 0.9682466736694678) 0%,
+    rgba(143, 34, 34, 1) 84%
+  );
 }
 
 .navbar {
