media query change

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,11 @@ body {
     "title pic "
     "quote pic "
     "missionbtn pic";
+    background: linear-gradient(
+      45deg,
+      rgba(50, 13, 13, 0.9682466736694678) 0%,
+      rgba(143, 34, 34, 1) 84%
+    );
   }
   .pic img {
     object-fit: contain;
