made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
 
 .container {
   display:flex;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
   position: relative;
@@ -62,6 +63,9 @@ body {
 
 .navbar {
   display: flex;
+  position:fixed;
+  top: 0;
+  z-index:99;
   justify-content: space-between;
   height: 5em;
   background-color: #ffffff;
