made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,6 @@ after {
 }
 
 body {
-  /* background: linear-gradient(
-    45deg,
-    rgba(50, 13, 13, 0.9682466736694678) 0%,
-    rgba(143, 34, 34, 1) 84%
-  ); */
   font-family: "Roboto Slab", serif;
   overflow: hidden;
 }
@@ -31,9 +26,6 @@ body {
   display: flex;
   position: relative;
   overflow: hidden;
-
-  /* width: 100vw; */
-  /* height: 100vh - var(--navHeight); */
   position: relative;
 
   background: rgb(50, 13, 13);
@@ -42,7 +34,6 @@ body {
     rgba(50, 13, 13, 0.9682466736694678) 0%,
     rgba(143, 34, 34, 1) 84%
   );
-  /* padding: 0 5em 0 5em; */
 }
 
 .hero-content {
@@ -68,8 +59,6 @@ body {
   justify-content: space-between;
   height: 10vh;
   background-color: #ffffff;
-  /* width: 100vw; */
-  /* padding: var(--sideMargins); */
 }
 
 .menu-logo {
@@ -142,8 +131,7 @@ body {
   font-weight: 100;
 }
 
-/* Effects */
-
+/* Animation */
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -178,7 +166,7 @@ body {
     height: auto;
     padding-left: 0;
     padding-right: 0;
-    row-gap: 4em;
+    row-gap: 3em;
 
     grid-template-areas:
       "title pic"
@@ -191,6 +179,8 @@ body {
     );
   }
   .pic img {
+    width: 436px;
+    height: 446px;
     grid-column-start: 2;
   }
 }
