--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,8 @@ body {
     height: auto;
     padding-left: 0;
     padding-right: 0;
+    padding-top: 1em;
+    padding-bottom: 1em;
     row-gap: 3em;
 
     grid-template-areas:
