--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ body {
   position: relative;
   overflow: hidden;
   position: relative;
+  height: fit-content;
 
   /* background: rgb(50, 13, 13); */
   background: linear-gradient(
@@ -54,6 +55,7 @@ body {
   padding-left: 10em;
   padding-right: 10em;
   background: inherit;
+  height: 90vh;
 }
 
 .navbar {
