--- a/css/styles.css
+++ b/css/styles.css
@@ -174,7 +174,7 @@ body {
     padding-right: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
-    row-gap: 3em;
+    row-gap: auto;
 
     grid-template-areas:
       "title pic"
