--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,6 @@ body {
   grid-area: pic;
   grid-column-start: 3;
   flex: 1 0;
-  overflow: hidden;
 }
 
 .pic img {
@@ -175,7 +174,7 @@ body {
     padding-right: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
-    row-gap: auto;
+    row-gap: 0.5em;
 
     grid-template-areas:
       "title pic"
