--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,8 @@ body {
   justify-content: space-between;
   height: 10vh;
   background-color: #ffffff;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .menu-logo {
