--- a/css/styles.css
+++ b/css/styles.css
@@ -89,10 +89,10 @@ body {
 
 .title {
   grid-area: title;
-
   font-size: 2.7em;
   letter-spacing: 0.02em;
   color: #fff;
+  grid-row: 1/3;
 }
 
 .pic {
