--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,6 @@ body {
   overflow: hidden;
   position: relative;
   height: 100vh;
-
-  /* background: rgb(50, 13, 13); */
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
@@ -127,6 +125,7 @@ body {
   border-radius: 5px;
   border-style: none;
   cursor: pointer;
+  margin-bottom: 1em;
 }
 
 .quote {
@@ -176,7 +175,6 @@ body {
     padding-right: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
-    row-gap: 0.2em;
 
     grid-template-areas:
       "title pic"
