--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ after {
 
 body {
   font-family: "Roboto Slab", serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   /* background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
@@ -30,7 +30,7 @@ body {
 .container {
   display: flex;
   position: relative;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: relative;
   height: 100vh;
   background: linear-gradient(
@@ -57,7 +57,7 @@ body {
 }
 
 .navbar {
-  overflow: hidden;
+  /* overflow: hidden; */
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -125,7 +125,7 @@ body {
   border-radius: 5px;
   border-style: none;
   cursor: pointer;
-  margin-bottom: 1em;
+  padding-bottom: 1em;
 }
 
 .quote {
