--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,11 @@ after {
 body {
   font-family: "Roboto Slab", serif;
   overflow-x: hidden;
-  /* background: linear-gradient(
+  background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
     rgba(143, 34, 34, 1) 84%
-  ); */
+  );
 }
 
 .container {
