--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ after {
 
 body {
   font-family: "Roboto Slab", serif;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
@@ -32,7 +32,7 @@ body {
   position: relative;
   /* overflow: hidden; */
   position: relative;
-  height: 100vh;
+  height: 90vh;
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
@@ -44,7 +44,6 @@ body {
   position: relative;
   display: grid;
   column-gap: 3em;
-  height: 90vh;
   grid-template-areas:
     "title pic pic"
     "quote pic pic"
@@ -52,8 +51,6 @@ body {
   padding-top: 4em;
   padding-left: 10em;
   padding-right: 10em;
-  background: inherit;
-  height: 90vh;
 }
 
 .navbar {
