made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ after {
 
 body {
   font-family: "Roboto Slab", serif;
+  background: transparent;
+
   /* overflow: hidden; */
   background: linear-gradient(
     45deg,
@@ -29,9 +31,7 @@ body {
 
 .container {
   display: flex;
-  position: relative;
-  /* overflow: hidden; */
-  position: relative;
+
   height: 90vh;
   background: linear-gradient(
     45deg,
@@ -41,7 +41,7 @@ body {
 }
 
 .hero-content {
-  position: relative;
+  /* position: relative; */
   display: grid;
   column-gap: 3em;
   grid-template-areas:
@@ -50,11 +50,16 @@ body {
     "missionbtn pic pic";
   padding-top: 4em;
   padding-left: 10em;
-  padding-right: 10em;
+
+  margin-right: 10em;
+  background: linear-gradient(
+    45deg,
+    rgba(50, 13, 13, 0.9682466736694678) 0%,
+    rgba(143, 34, 34, 1) 84%
+  );
 }
 
 .navbar {
-  /* overflow: hidden; */
   position: relative;
   display: flex;
   justify-content: space-between;
