made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
   display: flex;
   justify-content: space-between;
   height: 10vh;
-  background-color: #ffffff;
+  background: #ffffff;
   padding-left: 1em;
   padding-right: 1em;
 }
