--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ body {
   display: flex;
   justify-content: space-between;
   height: 10vh;
-  width: 100vw;
+
   background: #ffffff;
 }
 
@@ -79,6 +79,7 @@ body {
   align-items: center;
   list-style: none;
   column-gap: 2.5em;
+  width: 100%;
 }
 
 .menu-items li {
