--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ body {
     padding-right: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
+    width: 100%;
 
     grid-template-areas:
       "title pic"
