--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 
 .container {
   display: flex;
-
+  width: 100%;
   height: 90vh;
   background: linear-gradient(
     45deg,
@@ -41,6 +41,7 @@ body {
 }
 
 .hero-content {
+  overflow-x: hidden;
   position: relative;
   display: grid;
   column-gap: 3em;
@@ -49,7 +50,8 @@ body {
     "quote pic pic"
     "missionbtn pic pic";
   padding-top: 4em;
-  padding-left: 10em;
+  padding-left: 4em;
+  width: 100%;
 
   background: linear-gradient(
     45deg,
@@ -59,10 +61,14 @@ body {
 }
 
 .navbar {
+  /* overflow: hidden; */
   position: relative;
   display: flex;
   justify-content: space-between;
   height: 10vh;
+  width: 100%;
+  padding-left: 3em;
+  padding-right: 3em;
 
   background: #ffffff;
 }
@@ -100,7 +106,7 @@ body {
 }
 
 .pic img {
-  float: right;
+  /* float: right; */
   width: 536px;
   height: 546px;
 }
@@ -113,7 +119,6 @@ body {
 
 .mission-button {
   grid-area: missionbtn;
-  background-color: inherit;
 }
 
 .mission-button button {
@@ -125,7 +130,6 @@ body {
   border-radius: 5px;
   border-style: none;
   cursor: pointer;
-  padding-bottom: 1em;
 }
 
 .quote {
