--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,6 @@ body {
     padding-top: 1em;
     padding-bottom: 1em;
     width: 100%;
-    height: 90%;
     grid-template-areas:
       "title pic"
       "quote pic"
@@ -189,6 +188,9 @@ body {
       rgba(50, 13, 13, 0.9682466736694678) 0%,
       rgba(143, 34, 34, 1) 84%
     );
+  }
+  .container {
+    height: 90%;
   }
   .pic img {
     width: 400px;
