made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ body {
     padding-left: 1em;
     padding-right: 1em;
     padding-top: 1em;
-    padding-bottom: 1em;
+    /* padding-bottom: 1em; */
     width: 100%;
     grid-template-areas:
       "title pic"
