made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,7 @@ body {
     "quote pic pic"
     "missionbtn pic pic";
   padding-top: 4em;
+  padding-bottom: 4em;
   padding-left: 4em;
   width: 100%;
 
