--- a/css/styles.css
+++ b/css/styles.css
@@ -22,17 +22,41 @@ body {
   background: transparent;
 
   /* overflow: hidden; */
-  background: linear-gradient(
+  /* background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
     rgba(143, 34, 34, 1) 84%
-  );
+  ); */
 }
 
 .container {
   display: flex;
   width: 100%;
   height: 90vh;
+  /* background: linear-gradient(
+    45deg,
+    rgba(50, 13, 13, 0.9682466736694678) 0%,
+    rgba(143, 34, 34, 1) 84%
+  ); */
+}
+
+.hero-content {
+  /* overflow-x: hidden; */
+
+  display: grid;
+  column-gap: 3em;
+  row-gap: 3em;
+  grid-template-areas:
+    "title pic pic"
+    "quote pic pic"
+    "missionbtn pic pic";
+  justify-content: center;
+  margin-top: 2em;
+  margin-bottom: 2em;
+  padding-left: 4em;
+  width: 100%;
+  height: 100%;
+
   background: linear-gradient(
     45deg,
     rgba(50, 13, 13, 0.9682466736694678) 0%,
@@ -40,33 +64,22 @@ body {
   );
 }
 
-.hero-content {
-  overflow-x: hidden;
-  position: relative;
-  display: grid;
-  column-gap: 3em;
-  grid-template-areas:
-    "title pic pic"
-    "quote pic pic"
-    "missionbtn pic pic";
-  padding-top: 4em;
-  padding-bottom: 4em;
-  padding-left: 4em;
+.nav-container {
+  display: flex;
+  align-items: center;
   width: 100%;
-
-  background: linear-gradient(
-    45deg,
-    rgba(50, 13, 13, 0.9682466736694678) 0%,
-    rgba(143, 34, 34, 1) 84%
-  );
+  background-color: #fff;
+  z-index: 99;
+  /* height: 10vh; */
 }
 
 .navbar {
   /* overflow: hidden; */
   position: relative;
+
   display: flex;
   justify-content: space-between;
-  height: 10vh;
+
   width: 100%;
   padding-left: 3em;
   padding-right: 3em;
@@ -120,6 +133,8 @@ body {
 
 .mission-button {
   grid-area: missionbtn;
+  /* background-color: gray; */
+  justify-content: end;
 }
 
 .mission-button button {
@@ -139,7 +154,6 @@ body {
   color: #fff;
   line-height: 2em;
   font-size: 1.6rem;
-
   font-weight: 100;
 }
 
