--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,10 @@ body {
 
 .hero-content {
   /* overflow-x: hidden; */
-  padding-top: 100px;
-
+  padding-top: 8em;
+  padding-bottom: 8em;
+  padding-left: 4em;
+  padding-right: 4em;
   display: grid;
   column-gap: 3em;
   row-gap: 3em;
@@ -51,8 +53,8 @@ body {
     "title pic pic"
     "quote pic pic"
     "missionbtn pic pic";
-  margin-top: 2em;
-  height: 100%;
+
+  height: 100vh;
   width: 100%;
 }
 
@@ -170,10 +172,6 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
-    /* padding-left: 1em;
-    padding-right: 1em;
-    padding-top: 1em; */
-    /* padding-bottom: 1em; */
     width: 100%;
     grid-template-areas:
       "title pic"
