--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body {
 }
 
 .hero-content {
-  /* overflow-x: hidden; */
+  overflow: hidden;
   padding-top: 8em;
   padding-bottom: 8em;
   padding-left: 4em;
@@ -157,15 +157,15 @@ body {
 /* Large screens */
 @media only screen and (min-width: 1700px) {
   .pic img {
-    width: 736px;
-    height: 746px;
+    width: 636px;
+    height: 646px;
   }
 
   .title img {
-    width: 450px;
+    width: 350px;
   }
   .quote {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -173,15 +173,15 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
     width: 100%;
-    grid-template-areas:
+    /* grid-template-areas:
       "title pic"
       "quote pic"
-      "missionbtn pic";
-    background: linear-gradient(
+      "missionbtn pic"; */
+    /* background: linear-gradient(
       45deg,
       rgba(50, 13, 13, 0.9682466736694678) 0%,
       rgba(143, 34, 34, 1) 84%
-    );
+    ); */
   }
 
   .pic img {
