made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,8 +167,10 @@ body {
     font-size: 1.5rem;
   }
   .hero-content {
-    padding-top: 8em;
-    padding-bottom: 4em;
+    padding
+  }
+
+  .navbar {
   }
 }
 
