--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,8 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
     width: 100%;
-    /* grid-template-areas:
+    
+    grid-template-areas:
       "title pic"
       "quote pic"
       "missionbtn pic"; */
@@ -186,7 +187,7 @@ body {
       45deg,
       rgba(50, 13, 13, 0.9682466736694678) 0%,
       rgba(143, 34, 34, 1) 84%
-    ); */
+    );
   }
 
   .pic img {
