--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,6 @@ body {
     font-size: 1.5rem;
   }
   .hero-content {
-    padding
   }
 
   .navbar {
@@ -178,16 +177,11 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
     width: 100%;
-    
+
     grid-template-areas:
       "title pic"
       "quote pic"
-      "missionbtn pic"; */
-    /* background: linear-gradient(
-      45deg,
-      rgba(50, 13, 13, 0.9682466736694678) 0%,
-      rgba(143, 34, 34, 1) 84%
-    );
+      "missionbtn pic";
   }
 
   .pic img {
