made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   );
   --navHeight: 5em;
   --secondary-color: #ffa801;
+  --normal-padding: 8em 4em 8em 4em;
 }
 
 *,
@@ -168,6 +169,7 @@ body {
   }
 
   .navbar {
+    padding: var(--large-side-padding);
   }
 }
 
@@ -175,8 +177,8 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
     width: 100%;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .pic img {
