--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,6 @@ body {
   }
 
   .navbar {
-    padding: var(--large-side-padding);
   }
 }
 
@@ -185,5 +184,6 @@ body {
     height: 400px;
     grid-column-start: 2;
     float: left;
+    padding-left: 1.5em;
   }
 }
