--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,6 @@ body {
     height: 400px;
     grid-column-start: 2;
     float: left;
-    padding-left: 1.5em;
+    padding-right: 4em;
   }
 }
