made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,11 +179,13 @@ body {
     padding-right: 0;
   }
 
+  .pic {
+    padding-right: 1.5em;
+  }
   .pic img {
     width: 400px;
     height: 400px;
     grid-column-start: 2;
     float: left;
-    padding-right: 4em;
   }
 }
