--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ body {
 @media only screen and (min-width: 1920px) {
   .pic img {
     width: 1024px;
+    height: 1024px;
   }
 
   .title img {
