--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ body {
     font-size: 2rem;
   }
   .hero-content {
-    row-gap: 1em;
+    row-gap: 0.5em;
   }
 
   .navbar {
@@ -176,13 +176,14 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
     width: 100%;
-    padding-right: 1.5em;
-    padding-left: 1.5em;
+    /* padding-right: 1.5em;
+    padding-left: 1.5em; */
   }
 
   .pic {
-    padding-right: 1.5em;
+    /* padding-right: 1.5em; */
   }
+
   .pic img {
     width: 400px;
     height: 400px;
