--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,8 @@ body {
 }
 
 .container {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
   position: relative;
   width: 100vw;
   height: 100vh;
