made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,8 +44,6 @@ body {
 }
 
 .hero-content {
-  /* overflow: hidden; */
-  /* overflow-x: hidden; */
   padding: var(--normal-padding);
   display: grid;
   column-gap: 3em;
@@ -177,8 +175,7 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
-    width: 100vw;
-    padding: 0;
+    padding: 10em 5em 10em 5em;
   }
 
   .pic {
