made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,11 +175,11 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
-    padding: 10em 5em 10em 5em;
+    padding-left: 4em;
   }
 
   .pic {
-    /* padding-right: 1.5em; */
+    padding-right: 1.5em;
   }
 
   .pic img {
