made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,7 +182,7 @@ body {
   .pic img {
     width: 500px;
     height: 500px;
-    padding-right: 3.5em;
+    margin-left: 4em;
     /* grid-column-start: 2; */
     float: left;
   }
