--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ body {
     height: 760px;
     padding-right: 1.5em;
     margin-left: -8em;
+    padding-left: 6em;
   }
 
   .title img {
@@ -186,7 +187,7 @@ body {
     width: 500px;
     height: 500px;
     margin-left: -8em;
-    /* grid-column-start: 2; */
+
     float: left;
   }
 }
