--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
   display: grid;
   column-gap: 3em;
   row-gap: 1em;
-  grid-template-rows: auto;
+  grid-template-rows: auto auto auto;
   grid-template-areas:
     "title pic pic"
     "quote pic pic"
@@ -198,6 +198,8 @@ body {
   }
 
   .navbar {
+    padding-left: 6em;
+    padding-right: 6em;
   }
 }
 
