--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ body {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
     padding-left: 1.5em;
-    padding-top: 7em;
+    padding-top: 6em;
     row-gap: 0.2em;
   }
 
@@ -219,3 +219,8 @@ body {
     float: left;
   }
 }
+
+/* Mobile */
+/* @media (min-width: 768px) and (max-width: 1024px) {
+
+} */
