--- a/css/styles.css
+++ b/css/styles.css
@@ -208,11 +208,11 @@ body {
   .hero-content {
     height: 100%;
     padding-left: 1.5em;
-    padding-top: 4.8em;
+    /* padding-top: 4.8em; */
     row-gap: 0.2em;
   }
   .container {
-    padding-top: 5em;
+    padding-top: 3em;
   }
   .pic img {
     width: 500px;
