--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,7 @@ body {
     height: 100%;
     padding-left: 1.5em;
     padding-top: 4.8em;
+    row-gap: 1em;
   }
   .container {
     padding-top: 1em;
