--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 1024px) {
   .hero-content {
-    /* height: 100%; */
+    height: 90%;
     padding-left: 1.5em;
     padding-top: 4.8em;
     row-gap: 1em;
