--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,7 @@ body {
     padding-left: 1.5em;
     padding-top: 4.8em;
     row-gap: 2.1em;
+    column-gap: 1em;
   }
   .container {
     padding-top: 1em;
