--- a/css/styles.css
+++ b/css/styles.css
@@ -227,6 +227,8 @@ body {
 }
 
 /* Mobile */
-/* @media (min-width: 768px) and (max-width: 1024px) {
-
-} */
+@media (max-width: 800px) {
+  .pic {
+    display: none;
+  }
+}
