--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,8 @@ body {
 
 /* Mobile */
 @media (max-width: 800px) {
-  .pic {
-    display: none;
+  .pic img {
+    width: 100px;
+    height: 100px;
   }
 }
