--- a/css/styles.css
+++ b/css/styles.css
@@ -227,7 +227,7 @@ body {
 }
 
 /* Mobile */
-@media (max-width: 800px) {
+@media (min-width: 800px) {
   .pic img {
     width: 100px;
     height: 100px;
