made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,4 +245,13 @@ body {
     padding: 0;
     margin: 0;
   }
+
+  .title {
+    font-size: 2em;
+  }
+
+  grid-template-areas:
+    "title"
+    "quote"
+    "missionbtn";
 }
