--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ body {
   width: 20em;
   color: #fff;
   line-height: 2em;
-  font-size: 1.6rem;
+  font-size: 1.6em;
   font-weight: 100;
 }
 
@@ -255,5 +255,8 @@ body {
 
   .title {
     font-size: 2em;
+  }
+  .quote {
+    font: ;
   }
 }
