--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,9 @@ body {
 
 /* Mobile */
 @media (max-width: 799px) {
+  .container {
+    text-align: center;
+  }
   .menu-items li {
     display: none;
   }
