--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ body {
 @media (max-width: 799px) {
   .container {
     text-align: center;
+    padding-top: 3em;
   }
   .menu-items li {
     display: none;
