--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,7 @@ body {
     padding-top: 2em;
     padding-bottom: 3em;
     row-gap: 1.5em;
+    grid-template-rows: 100px 100px 100px;
     grid-template-areas:
       "title"
       "quote"
