--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,7 @@ body {
     padding-bottom: 3em;
     row-gap: 2em;
     grid-template-rows: 150px 100px 100px;
+    grid-template-columns: auto;
     grid-template-areas:
       "title"
       "quote"
