--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ body {
   column-gap: 3em;
   row-gap: 5em;
   grid-template-rows: 200px 200px 100px;
-  /* grid-template-rows: auto auto auto; */
   grid-template-areas:
     "title pic pic"
     "quote pic pic"
@@ -237,7 +236,7 @@ body {
   }
 
   .menu-logo img {
-    display: none;
+    width: 60px;
   }
   .pic img {
     width: 100px;
