--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ body {
     padding-top: 2em;
     padding-bottom: 3em;
     row-gap: 2em;
-    grid-template-rows: 150px 100px 100px;
+    grid-template-rows: 150px 100px 100px 100px;
     grid-template-columns: 1fr;
     grid-template-areas:
       "title"
