--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ body {
     padding-top: 2em;
     /* padding-bottom: 3em; */
     row-gap: 0;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: 200px auto auto;
     grid-template-columns: 1fr;
     grid-template-areas:
       "title"
