--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ body {
     padding-top: 1em;
     /* padding-bottom: 3em; */
     row-gap: 1.5em;
-    grid-template-rows: 100px 100px auto auto;
+    grid-template-rows: 100px 100px auto 100px;
     grid-template-columns: 1fr;
     grid-template-areas:
       "title"
