made .navbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ body {
       "pic"
       "quote"
       "missionbtn";
-    height: 90%;
+    height: 80vh;
   }
   .navbar {
     padding-left: 10px;
