--- a/css/styles.css
+++ b/css/styles.css
@@ -253,7 +253,7 @@ body {
     /* padding-top: 1em; */
     /* padding-bottom: 3em; */
     row-gap: 2em;
-    /* grid-template-rows: 100px 100px auto; */
+    grid-template-rows: 200px auto auto;
     /* grid-template-columns: 1fr; */
     grid-template-areas:
       "pic"
